# avellcc

./: .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  install.sh  main.go  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
avellcc/: __init__.py  cli.py  effects.py  fan_control.py  hidraw.py  ite8295.py  keyboard_map.py  lightbar.py
cmd/: fan.go  keyboard.go  lightbar.go  reload.go  root.go
docs/: lightbar-re.md
internal/config/: config.go
internal/fan/: fan.go
internal/hidraw/: hidraw.go
internal/keyboard/: effects.go  ite8295.go  keymap.go
internal/lightbar/: ite8911.go
internal/tui/: fan_monitor.go  keyboard_panel.go  keyboard_preview.go  lightbar_panel.go  styles.go
systemd/: avellcc-restore.service  avellcc.service
systemd/system-sleep/: avellcc
udev/: 99-avell-keyboard.rules  99-avellcc.rules
