[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avell-control-center"
version = "0.1.0"
description = "Control Center for Avell Storm 590X (Clevo) on Linux - RGB LEDs, fans, and power profiles"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Hugo" }]
dependencies = [
    "hidapi>=0.14",
]

[project.optional-dependencies]
reactive = ["evdev>=1.7"]
gui = ["PyQt6>=6.5"]

[project.scripts]
avellcc = "avellcc.cli:main"

[tool.setuptools.packages.find]
include = ["avellcc*"]
